<resources>

    <!-- Database nodes -->
    <string name="node_users">users</string>
    <string name="node_photos">photos</string>
    <string name="node_images">images</string>
    <string name="node_pet">pet</string>

    <string name="app_name">ThePet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Test User A</string>
    <string name="nav_header_subtitle">Ranking Starts</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="search_hint">Search any Pets</string>

    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <!--For home fragment-->
    <string name="recommended">Recommended</string>
    <string name="explore">Explore</string>

    <!--SelectPhotoDialogFragment-->
    <string name="choose_album">choose from album</string>
    <string name="take_photo">take photo</string>
    <string name="select_photo">select photo</string>

    <!--SelectPhotoDialogFragment-->
    <string name="List_a_new_pet">List a new pet</string>

    <!--Add-fragment_add_image-->
    <string name="add_image_description">Add a new Pet Image</string>

    <!--Add-fragment_add_info-->
    <string name="breeder">Breeder</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="size">Size</string>
    <string name="weight">Weight</string>
    <string name="description">Description</string>
    <string name="next">Next</string>
    <string name="age">Age</string>

    <!--Add-fragment_add_checklist-->
    <string name="vaccines">Vaccines Status</string>
    <string name="health">Health Status</string>
    <string name="train">Training Status</string>
    <string name="health_status">Health Status</string>
    <string name="submit">Submit</string>

    <string name="permission_request_denied">Permission request denied</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>

</resources>
